# ai-code-reviewer

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
ai_code_reviewer/: __init__.py  cli.py  config.py  diff_parser.py  gemini_client.py  github_client.py  logging_config.py  models.py  report.py  review_engine.py
tests/: test_diff_parser.py  test_github_client.py  test_review_engine.py
